--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "redux": "^4.2.0",
-    "react-redux": "^7.2.9"
+    "react-redux": "^7.2.9",
+    "axios": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
