--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "web-vitals": "^2.1.4",
     "redux": "^4.2.0",
     "react-redux": "^7.2.9",
-    "axios": "^1.0.0"
+    "axios": "^1.0.0",
+    "react-router-dom": "^6.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
